--- a/styles/main.css
+++ b/styles/main.css
@@ -26,10 +26,13 @@ header {
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+
     font-family: "Open Sans", sans-serif;
     color: var(--scorpion);
     line-height: 1.5;
-    background-color: var(--wild-sand);
+    /* background-color: var(--wild-sand); */
     /* margin-bottom: 0; */
 }
 
@@ -65,10 +68,14 @@ picture img {
     width: 100vw;
     height: 100vh;
     object-fit: cover;
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
-    z-index: -2;
+    z-index: -1;
+}
+
+.hero {
+    background-color: var(--wild-sand);
 }
 
 .inline-picture {
@@ -131,7 +138,10 @@ a:focus {
 
 main {
     width: 100%;
-    background-color: var(--wild-sand);
+    max-width: 70rem;
+    /* background-color: var(--wild-sand); */
+    align-self: center;
+    margin: 0 2rem;
 }
 
 .button:last-child {
@@ -139,7 +149,7 @@ main {
 }
 
 h1 {
-    position: fixed;
+    position: relative;
     top: 50%;
     left: 50%;
     z-index: -1;
@@ -153,10 +163,17 @@ h1 {
 }
 
 article {
+    width: 100%;
     background-color: var(--wild-sand);
-    margin: 0 auto;
-    max-width: 50rem;
+    /* margin: 0 auto;
+    max-width: 50rem; */
     padding: 0 1rem;
+}
+
+.panel {
+    /* implement fixme*/
+    display: flex;
+    flex-direction: column;
 }
 
 .first-article {
@@ -192,7 +209,8 @@ section {
 .button:active,
 .button:focus {
     background-color: var(--dark-au-chico);
-    box-shadow: 0 0 0 2px var(--dark-au-chico);
+    border: 2px solid var(--dark-au-chico);
+    /* box-shadow: 0 0 0 2px var(--dark-au-chico); */
 }
 
 .scroll-down {
@@ -263,16 +281,29 @@ header .dead-link:hover {
     bottom: 0;
 }
 
+.shark-svg {
+    width: 144px;
+}
+
 /* cards */
 .cards {
     display: flex;
-    margin-left: 1rem;
-    margin: 0 auto;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
+    padding: 1rem;
 }
 
+.cards img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
 .card {
-    float: left;
-    margin: 3rem .5rem;
+    /* float: left; */
+    /* margin: 3rem .5rem; */
     position: relative;
     display: block;
     max-width: 350px;
@@ -286,20 +317,26 @@ header .dead-link:hover {
 }
 
 .card .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background-color: var(--overlay);
     opacity: 0;
+    transition: opacity 800ms ease;
 }
 
 .card .overlay p {
     margin-left: 1rem;
     margin-top: 1em;
-    font-size: 3rem;
+    font-size: 1rem;
     line-height: 3rem;
     color: var(--wild-sand);
 }
 
 .card:hover .overlay {
-    transition: opacity 800ms ease;
+    /* transition: opacity 800ms ease; */
     opacity: 1;
 }
 
@@ -307,4 +344,29 @@ header .dead-link:hover {
 .card:focus {
     background-color: var(--dark-scorpion);
     box-shadow: 0 0 0 2px var(--dark-scorpion);
+}
+
+@media (min-width: 700px) {
+    .panel {
+        flex-direction: row;
+        gap: 2rem;
+    }
+    .panel h2 {
+        margin: 0;
+    }
+    /* .panel .left {
+        order: -2; ???
+    } */
+    
+    /* cards */
+    .cards {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+
+    .cards .card {
+        flex: 1 1 45%;
+    }
+
 }
