--- a/styles/main.css
+++ b/styles/main.css
@@ -25,6 +25,22 @@ header {
     z-index: 1;
 }
 
+header {
+    display: flex;
+    align-items: flex-end;
+}
+
+header nav ul {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    gap: 2rem;
+}
+
+header nav ul {
+    list-style-type: none;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -32,7 +48,7 @@ body {
     font-family: "Open Sans", sans-serif;
     color: var(--scorpion);
     line-height: 1.5;
-    /* background-color: var(--wild-sand); */
+    background-color: var(--wild-sand);
     /* margin-bottom: 0; */
 }
 
@@ -65,22 +81,38 @@ h6 {
 
 picture img {
     display: block;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     position: relative;
     top: 0;
     left: 0;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 .hero {
+    position: relative;
     background-color: var(--wild-sand);
 }
 
+.hero h1 {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    /* z-index: -1; */
+    margin: 0;
+    color: var(--wild-sand);
+    text-shadow: 0 0 30px rgb(0 0 0 / 70%);
+    font-size: 3.5rem;
+    width: 100%;
+    text-align: center;
+    padding: 0 2rem;
+    transform: translate(-50%, -50%);
+}
+
 .inline-picture {
-    margin-top: 2rem;
-    max-width: 50rem;
+    /* margin-top: 2rem;
+    max-width: 50rem; */
     display: block;
 }
 
@@ -144,30 +176,21 @@ main {
     margin: 0 2rem;
 }
 
-.button:last-child {
-    margin-bottom: 10rem;
-}
-
-h1 {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    z-index: -1;
-    color: var(--wild-sand);
-    text-shadow: 0 0 30px rgb(0 0 0 / 70%);
-    font-size: 3.5rem;
-    width: 100%;
-    text-align: center;
-    padding: 0 2rem;
-    transform: translate(-50%, -50%);
-}
-
 article {
     width: 100%;
     background-color: var(--wild-sand);
-    /* margin: 0 auto;
-    max-width: 50rem; */
     padding: 0 1rem;
+    padding-top: 5rem;
+}
+
+article img {
+    object-fit: cover;
+    width: 100%;
+}
+
+article h2 {
+    margin: 0;
+    padding-top: 8rem;
 }
 
 .panel {
@@ -176,8 +199,18 @@ article {
     flex-direction: column;
 }
 
-.first-article {
+/* .first-article {
     margin-top: 100vh;
+} */
+
+.panel .image-wrap {
+    order: -1;
+    /* width: 100%; */
+    flex: 1 1 40%;
+}
+
+.text-wrap {
+    padding-right: 2rem;
 }
 
 section {
@@ -217,7 +250,7 @@ section {
     background-color: var(--koromiko);
     padding: 1rem 2rem;
 
-    position: fixed;
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -228,7 +261,7 @@ section {
     color: var(--dark-scorpion);
     text-align: center;
 
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 .scroll-down::before {
@@ -245,6 +278,7 @@ section {
     content: "▼";
 }
 
+/* header stuff */
 header a:link {
     color: var(--wild-sand);
     font-weight: bold;
@@ -255,13 +289,13 @@ header a:visited {
     color: var(--wild-sando);
 }
 
-header a:hover {
-    text-decoration: underline;
-}
-
 header a:active,
 header a:focus {
     color: var(--gray);
+}
+
+header nav a:hover {
+    text-shadow: 0 0 10px rgb(0 0 0);
 }
 
 header .dead-link {
@@ -269,8 +303,9 @@ header .dead-link {
 }
 
 header .dead-link:hover {
-    text-decoration: none;
     color: var(--gray);
+    text-shadow: none;
+    cursor: default;
 }
 
 .overlay {
@@ -289,7 +324,6 @@ header .dead-link:hover {
 .cards {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     gap: 2rem;
     padding: 1rem;
 }
@@ -306,13 +340,12 @@ header .dead-link:hover {
     /* margin: 3rem .5rem; */
     position: relative;
     display: block;
-    max-width: 350px;
-    max-height: 350px;
+    /* max-width: 350px;
+    max-height: 350px; */
 }
 
 .image-wrapper img {
     display: block;
-    max-width: 350px;
     object-fit: cover;
 }
 
@@ -353,6 +386,7 @@ header .dead-link:hover {
     }
     .panel h2 {
         margin: 0;
+        padding-top: 0rem;
     }
     /* .panel .left {
         order: -2; ???
@@ -369,4 +403,10 @@ header .dead-link:hover {
         flex: 1 1 45%;
     }
 
+}
+
+@media (min-width: 1000px) {
+    .cards {
+        flex-wrap: nowrap;
+    }
 }
