--- a/styles/main.css
+++ b/styles/main.css
@@ -56,11 +56,7 @@ aside {
     background-color: var(--koromiko);
     color: var(--dark-scorpion);
     margin-top: 4rem;
-    padding: 3rem 1rem;
-}
-
-aside h2 {
-    color: var(--dark-scorpion);
+    padding: 0rem 1rem;
 }
 
 footer {
@@ -135,6 +131,11 @@ h2 {
     padding-top: 2rem;
 }
 
+aside h2 {
+    color: var(--dark-scorpion);
+    padding-top: 0;
+}
+
 h3 {
     color: var(--dark-au-chico);
     font-size: 1.5rem;
@@ -173,7 +174,7 @@ main {
     max-width: 70rem;
     /* background-color: var(--wild-sand); */
     align-self: center;
-    margin: 0 2rem;
+    /* margin: 0 2rem; */
 }
 
 article {
@@ -183,11 +184,11 @@ article {
     /* padding-top: 5rem; */
 }
 
-article:first-child {
+article {
     padding-top: 5rem;
 }
 
-article img {
+img {
     object-fit: cover;
     width: 100%;
 }
