--- a/styles/main.css
+++ b/styles/main.css
@@ -66,6 +66,11 @@ footer {
     margin-bottom: 0;
 }
 
+h1 {
+    padding-left: 1rem;
+    padding-top: 4rem;
+}
+
 h1,
 h2,
 h3,
@@ -355,6 +360,9 @@ header .dead-link:hover {
 }
 
 .card .overlay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     top: 0;
     left: 0;
@@ -366,8 +374,8 @@ header .dead-link:hover {
 }
 
 .card .overlay p {
-    margin-left: 1rem;
-    margin-top: 1em;
+    /* margin-left: 1rem;
+    margin-top: 1em; */
     font-size: 1rem;
     line-height: 3rem;
     color: var(--wild-sand);
