--- a/styles/main.css
+++ b/styles/main.css
@@ -116,7 +116,7 @@ picture img {
 h1,
 h2,
 h3 {
-    line-height: 1.2;
+    line-height: 1;
 }
 
 h1 {
@@ -209,13 +209,9 @@ article h2 {
 } */
 
 .panel .image-wrap {
-    
+    order: -1;
     /* width: 100%; */
     flex: 1 1 40%;
-}
-
-.panel .image-wrap:first-child {
-    order: -1;
 }
 
 .text-wrap {
@@ -330,6 +326,15 @@ header .dead-link:hover {
     width: 144px;
 }
 
+.form .image-wrap {
+    order: 0;
+}
+
+.contact {
+    padding: 1rem;
+    background-color: var(--koromiko);
+}
+
 /* cards */
 .card-wrap {
     padding: 1rem;
@@ -376,7 +381,7 @@ header .dead-link:hover {
 .card .overlay p {
     /* margin-left: 1rem;
     margin-top: 1em; */
-    font-size: 1rem;
+    font-size: 3rem;
     line-height: 3rem;
     color: var(--wild-sand);
 }
@@ -401,6 +406,15 @@ header .dead-link:hover {
         margin: 0;
         padding-top: 0rem;
     }
+
+    .contact {
+        margin-top: 9rem;
+        padding: 1rem;
+        background-color: var(--koromiko);
+    }
+    .about {
+        padding: 1rem;
+    }
     /* .panel .left {
         order: -2; ???
     } */
@@ -414,6 +428,10 @@ header .dead-link:hover {
 
     .cards .card {
         flex: 1 1 45%;
+    }
+
+    .card .overlay p {
+        font-size: 2rem;
     }
 
 }
